fixed some spelling errors

--- a/report/root.tex
+++ b/report/root.tex
@@ -140,7 +140,7 @@ A conclusion section is not required. Although a conclusion may review the main 
 
 Appendixes should appear before the acknowledgment.
 
-\section*{ACKNOWLEDGMENT}
+\section*{ACKNOWLEDGEMENT}
 
 The preferred spelling of the word “acknowledgment” in America is without an “e” after the “g”. Avoid the stilted expression, “One of us (R. B. G.) thanks . . .”  Instead, try “R. B. G. thanks”. Put sponsor acknowledgments in the unnumbered footnote on the first page.
 
